# musique-website

./: README.md
musique_website/frontend/src/cpp/: App.cpp  App.h  AssetID.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Main.cpp  MusicDisplayConstants.h  RenderMeasurement.cpp  RenderMeasurement.h  Settings.h  TranspositionRequest.cpp  TranspositionRequest.h  ViewModelData.h  comp.py  compile.bat
musique_website/frontend/src/cpp/Collisions/: BoundingBox.cpp  BoundingBox.h  Vec2.h
musique_website/frontend/src/cpp/Debugging/: Debug.h  Logging.cpp  Logging.h
musique_website/frontend/src/cpp/Editor/: Editor.cpp  Editor.h  EditorCommand.cpp  EditorCommand.h  ElementProperties.cpp  JsonHelper.h  Properties.h
musique_website/frontend/src/cpp/Events/: InputEvent.h
musique_website/frontend/src/cpp/Exceptions/: BaseException.h  Exceptions.h  ParseExceptions.h
musique_website/frontend/src/cpp/FileParsers/: FileParser.h
musique_website/frontend/src/cpp/FileParsers/ChordSheetParser/: ChordSheetParser.cpp  ChordSheetParser.h
musique_website/frontend/src/cpp/FileParsers/HarmonyXMLParser/: HarmonyXMLDefaults.h  HarmonyXMLExportHelper.cpp  HarmonyXMLExportHelper.h  HarmonyXMLExporter.cpp  HarmonyXMLExporter.h  HarmonyXMLParser.cpp  HarmonyXMLParser.h
musique_website/frontend/src/cpp/FileParsers/Json/: JsonHelper.cpp  JsonHelper.h
musique_website/frontend/src/cpp/FileParsers/MusicXMLParser/: BaseElementParser.cpp  BaseElementParser.h  MusicXMLHelper.cpp  MusicXMLHelper.h  MusicXMLParser.cpp  MusicXMLParser.h  NoteElementParser.cpp  NoteElementParser.h  ParseError.cpp  ParseError.h  XMLHelper.cpp  XMLHelper.h
musique_website/frontend/src/cpp/FrameData/: FrameData.h
musique_website/frontend/src/cpp/MusicData/: ComplexLine.cpp  ComplexLine.h  Duration.h  Instrument.cpp  Instrument.h  InstrumentBracket.cpp  InstrumentBracket.h  InstrumentInfo.h  MidiInstrument.h  Pitch.cpp  Pitch.h  Song.cpp  Song.h  SongData.cpp  SongData.h  SoundEvent.cpp  SoundEvent.h  Staff.cpp  Staff.h  String.h  System.h  SystemMeasure.h  Text.h  Transpose.h  Types.h
musique_website/frontend/src/cpp/MusicData/BaseElements/: BaseElement.h  LineElement.cpp  LineElement.h  NumberElement.cpp  NumberElement.h  PrintableElement.h  TextElement.cpp  TextElement.h  TextualElement.cpp  TextualElement.h  VisibleElement.cpp  VisibleElement.h
musique_website/frontend/src/cpp/MusicData/ChordSheetData/: CSChord.cpp  CSChord.h  CSLyric.cpp  CSLyric.h  CSMeasure.cpp  CSMeasure.h  CSStaff.cpp  CSStaff.h  LyricPickup.h  LyricalPhrase.h  SyllableGroup.h
musique_website/frontend/src/cpp/MusicData/Chords/: Chord.cpp  Chord.h  ChordDegree.h  ChordDiagram.cpp  ChordDiagram.h
musique_website/frontend/src/cpp/MusicData/Directions/: BracketDirection.cpp  BracketDirection.h  Direction.cpp  Direction.h  DurationDirection.cpp  DurationDirection.h  Dynamic.cpp  Dynamic.h  DynamicWedge.cpp  DynamicWedge.h  Marker.cpp  Marker.h  MetronomeMark.cpp  MetronomeMark.h  MetronomeNote.h  Rehearsal.cpp  Rehearsal.h  TextDirection.cpp  TextDirection.h  Words.cpp  Words.h
musique_website/frontend/src/cpp/MusicData/Endings/: Ending.cpp  Ending.h  EndingGroup.h
musique_website/frontend/src/cpp/MusicData/Measures/: Arpeggio.cpp  Arpeggio.h  Barline.cpp  Barline.h  Clef.cpp  Clef.h  KeySignature.cpp  KeySignature.h  Measure.cpp  Measure.h  MeasureNumber.cpp  MeasureNumber.h  MeasureRepeat.cpp  MeasureRepeat.h  MultiMeasureRestSymbol.cpp  MultiMeasureRestSymbol.h  TimeSignature.cpp  TimeSignature.h  Tuplet.cpp  Tuplet.h
musique_website/frontend/src/cpp/MusicData/Notes/: Accidental.cpp  Accidental.h  AugmentationDot.cpp  AugmentationDot.h  Fermata.cpp  Fermata.h  GlissandoSlide.cpp  GlissandoSlide.h  Lyric.cpp  Lyric.h  Note.cpp  Note.h  NoteChord.cpp  NoteChord.h  NoteFlag.cpp  NoteFlag.h  NoteHead.cpp  NoteHead.h  NoteStem.cpp  NoteStem.h  Slur.cpp  Slur.h  TABSlur.cpp  TABSlur.h  Tie.cpp  Tie.h  TremoloSingle.cpp  TremoloSingle.h
musique_website/frontend/src/cpp/MusicData/Notes/Articulations/: Accent.cpp  Accent.h  Articulation.cpp  Articulation.h  BreathMark.cpp  BreathMark.h  Caesura.cpp  Caesura.h  Slide.cpp  Slide.h  StaccatoArticulation.cpp  StaccatoArticulation.h  Stress.cpp  Stress.h
musique_website/frontend/src/cpp/MusicData/Notes/Beams/: Beam.cpp  Beam.h  BeamGroup.cpp  BeamGroup.h  NoteBeamData.h
musique_website/frontend/src/cpp/MusicData/Notes/Ornaments/: Mordent.cpp  Mordent.h  Ornaments.cpp  Ornaments.h  TrillMark.cpp  TrillMark.h  (+3 more)
musique_website/frontend/src/cpp/MusicData/Page/: Credit.cpp  Credit.h  Page.h  PageNumber.cpp  PageNumber.h
musique_website/frontend/src/cpp/MusicPlayers/: Metronome.cpp  Metronome.h  MidiCallbacks.cpp  MidiCallbacks.h  MidiPlayer.cpp  MidiPlayer.h  MusicPlayer.cpp  MusicPlayer.h  Player.h
musique_website/frontend/src/cpp/Rendering/: CubicCurve.h  Line.h  MusicRenderer.cpp  MusicRenderer.h  Paint.h  PrintRenderData.h  RenderBitmap.h  RenderData.cpp  RenderData.h  Renderer.cpp  Renderer.h  SMuFLGlyph.h  SpannableText.h  Text.h
musique_website/frontend/src/cpp/Utils/: Converters.cpp  Converters.h  Math.cpp  Math.h
musique_website/frontend/src/cpp/libs/tinyxml2/: tinyxml2.cpp  tinyxml2.h
(+266 files in other folders)
